* 修正SpringBoot3.2版本auto-config失效的问题